--- a/views/header.ejs
+++ b/views/header.ejs
@@ -13,7 +13,7 @@
 <!-- Custom fonts for this template-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
 
 <!-- Custom styles for this template-->
 <link href="/stylesheets/css/style.css" rel="stylesheet">
