--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -294,6 +294,13 @@
 
             if (isSidebarOpen) {
                 $('.sidebar .collapse').collapse('hide');
+                $('#content').toggleClass('content-toggled');
+                $('.navbar').toggleClass('navbar-toggled');
+                $('.sticky-footer').toggleClass('footer-toggled');
+            } else {
+                $('#content').removeClass('content-toggled');
+                $('.navbar').removeClass('navbar-toggled');
+                $('.sticky-footer').removeClass('footer-toggled');
             }
         }
 
