Updated display for Masters [UI]

--- a/views/access/access.ejs
+++ b/views/access/access.ejs
@@ -15,19 +15,17 @@
                     </div>
                     <div class="card-body">
                         <div class="row mb-2">
-                            <div class="col-md-12">
+                            <div class="col-md-6">
                                 <label class="form-label" for="mu_password">Access Code</label>
                                 <input id="accesscode" name="accesscode" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
-                        </div>
-                        <div class="row mb-2">
-                            <div class="col-md-12">
+                            <div class="col-md-6">
                                 <label class="form-label" for="mu_password">Current Access Name</label>
                                 <input id="currentAccessName" name="currentAccessName" type="text" class="form-control" placeholder="Enter new Access name" aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
-                        <div class="row mb-2">
-                            <div class="col-md-12">
+                        <div class="row mb-2 justify-content-center">
+                            <div class="col-md-6">
                                 <label class="form-label" for="mu_password">Access Name</label>
                                 <input id="accessnamemodal" name="accessnamemodal" type="text" class="form-control" placeholder="Enter new Access name" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
@@ -107,8 +105,8 @@
                             <th class = "col-3">Access Name</th>
                             <th class = "col-2">Created by</th>
                             <th class = "col-2">Created date</th>
-                            <th class = "col-2">Status</th>
-                            <th class = "col-1">Action</th>               
+                            <th class = "col-1">Status</th>
+                            <th class = "col-1"></th>               
                         </tr>
                     </thead>
 
