--- a/views/products/products.ejs
+++ b/views/products/products.ejs
@@ -168,7 +168,7 @@
             <div class="col-md-4">
                 <div class="row mb-2">
                     <button id="toggleButton" name="toggleButton" class=" ml-3 btn btn-circle btn-outline-inventory ">
-                        <i class="fas fa-chevron-right"></i>
+                        <i class="fas fa-plus"></i>
                     </button>
                     <h6 class="mt-2 ml-3 font-weight-bold table-title">Products Data</h6>
                 </div>   
@@ -195,18 +195,18 @@
     </div>
     <div class="card-body">
         <div class="table-responsive scrollable-table-container-lg">
-            <table class="table table-bordered custom-mobile-table" id="products-dataTable" width="100%" cellspacing="10">
+            <table class="table custom-mobile-table" id="products-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
-                        <th class = "col-1">Product ID</th>
-                        <th class = "col-1">Description</th>
-                        <th class = "col-1">Price</th>
-                        <th class = "col-2">Barcode</th>
-                        <th class = "col-1">Product Image</th>
-                        <th class = "col-2">Created by</th>
-                        <th class = "col-2">Created date</th>
+                        <th class="col-1">Product ID</th>
+                        <th>Product Image</th>
+                        <th>Description</th>
+                        <th>Price</th>
+                        <th>Barcode</th>
+                        <th>Created by</th>
+                        <th>Created date</th>
                         <th class = "col-1">Status</th>
-                        <th class = "col-1">Action</th>               
+                        <th class = "col-1"></th>               
                     </tr>
                 </thead>
                     
