--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -329,7 +329,7 @@
                 setTimeout(() => {
                 toggleView.style.display = "none";
                 }, 500);
-                toggleButton.innerHTML = '<i class="fas fa-chevron-right"></i>';
+                toggleButton.innerHTML = '<i class="fas fa-plus"></i>';
             }
 
             isOpen = !isOpen;
