--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -14,7 +14,7 @@
         alt="Responsive image"
       />
     </div>
-    <div class="sidebar-brand-text mx-3 text-white">Sales Inventory</div>
+    <div class="sidebar-brand-text mx-3 text-white">Asvesti</div>
   </a>
 
   <!-- Divider -->
