--- a/views/users/usersscripts.ejs
+++ b/views/users/usersscripts.ejs
@@ -7,6 +7,24 @@
 
         let usercode = "";
         let status = "";
+
+        const loader = `  
+            <tr id="loading-state">
+                <td><div class="custom-loader"></div></td>
+                <td><div class="custom-loader"></div></td>
+                <td><div class="custom-loader"></div></td>
+                <td><div class="custom-loader"></div></td>
+                <td><div class="custom-loader"></div></td>
+                <td><div class="custom-loader"></div></td>
+                <td><div class="custom-loader"></div></td>
+                <td><div class="custom-loader"></div></td>
+                <td><div class="custom-loader"></div></td>
+            </tr>`;
+
+        const tbody = $('#users-dataTable tbody');
+        for (let i = 0; i < 7; i++) {
+            tbody.append(loader);
+        }
     
         reloadTableData();
     
@@ -17,7 +35,7 @@
             });
             console.log(dataRow);
             usercode = dataRow[0];
-            status = dataRow[833333333333];
+            status = dataRow[7];
         }) 
 
         $(document).on('click', '#editBtn', function(){
@@ -60,8 +78,9 @@
                         if (result.msg == 'success') {
                             reloadTableData()
                             success('Saved', 'Successfully')
-                            $('#employeeid').val('');
-                            $('#accessname').val('');
+                            $('#employeelist').val('');
+                            $('#accesslistmain').val('');
+                            $('#branchlist').val('');
                         }
     
                         if (result.msg == 'exist') {
@@ -93,14 +112,17 @@
                     let action = '';
                     if (item.status !== 'DELETED'){
                         if (item.status === 'ACTIVE') {
-                        action = `
-                                <button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button>
-                                <button id="inactiveBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="inactiveBtn">INACTIVE</button>`;
+                            action = `
+                            <span class="editbutton" id="editBtn" name="editBtn" data-toggle="modal" data-target="#accessModal"><i class="fas fa-edit" style="color: rgb(99, 115, 129);"></i></span>
+                            <span class="editbutton" id="inactiveBtn"><i class="fas fa-eye-slash" style="color: rgb(99, 115, 129);"></i></span>`;
                         } else if (item.status === 'INACTIVE') {
                             action = `
-                                <button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button>
-                                <button id="activeBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="activeBtn">ACTIVE</button>`;
+                            <span class="editbutton" id="editBtn" name="editBtn" data-toggle="modal" data-target="#accessModal"><i class="fas fa-edit" style="color: rgb(99, 115, 129);"></i></span>
+                            <span class="editbutton" id="activeBtn"><i class="fas fa-eye" style="color: rgb(99, 115, 129);"></i></span>`;
                         }
+                        const statusBackground = item.status === 'ACTIVE' ? 'status-success' : 'status-warning';
+                        const containerBackground = item.status === 'ACTIVE' ? 'status-container-sc' : 'status-container-wr';
+
                         const tr = $('<tr>').append(
                             $('<td>', { text: item.usercode, 'data-label': 'User Code', class: 'custom-mobile-align' }),
                             $('<td>', { text: item.employeeid, 'data-label': 'Employee ID', class: 'custom-mobile-align' }),
@@ -109,7 +131,11 @@
                             $('<td>', { text: item.branchid, 'data-label': 'Branch ID', class: 'custom-mobile-align' }),
                             $('<td>', { text: item.createdby, 'data-label': 'Created By', class: 'custom-mobile-align' }),
                             $('<td>', { text: item.createddate, 'data-label': 'Created Date', class: 'custom-mobile-align' }),
-                            $('<td>', { text: item.status, 'data-label': 'Status', class: 'custom-mobile-align' }),
+                            $('<td>', { class: 'custom-mobile-align', 'data-label': 'Status' }).append(
+                                $('<div>', { class: containerBackground }).append(
+                                $('<span>', { text: item.status, class: statusBackground })
+                                )
+                            ),
                             $('<td>', { html: action, 'data-label': 'Action', class: '' })
                         );
 
