--- a/public/stylesheets/css/components.css
+++ b/public/stylesheets/css/components.css
@@ -66,3 +66,50 @@
 .green-bg {
     background-color: rgba(1, 85, 21, 0.75) !important;
 }
+
+/* STATUS */
+.status-success {
+    border-radius: 6px;
+    cursor: default;
+    -webkit-box-align: center;
+    align-items: center;
+    vertical-align: middle;
+    white-space: nowrap;
+    -webkit-box-pack: center;
+    justify-content: center;
+    text-transform: capitalize;
+    padding: 2rem 0;
+    font-size: 0.85rem;
+    font-weight: 700;
+    transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    color: rgb(17, 141, 87);
+}
+
+.status-warning {
+    border-radius: 6px;
+    cursor: default;
+    -webkit-box-align: center;
+    align-items: center;
+    vertical-align: middle;
+    white-space: nowrap;
+    -webkit-box-pack: center;
+    justify-content: center;
+    text-transform: capitalize;
+    padding: 2rem 0;
+    font-size: 0.85rem;
+    font-weight: 700;
+    transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    color: rgb(183, 29, 24);
+}
+
+.status-container-sc {
+    background-color: rgba(34, 197, 94, 0.16);
+    padding: 0px 6px;
+    border-radius: 0.375rem;
+}
+
+.status-container-wr {
+    background-color: rgba(255, 86, 48, 0.16);
+    padding: 0px 6px;
+    border-radius: 0.375rem;
+}
