--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -1,13 +1,9 @@
 @import url(customdropdown.css);
 @import url(toastr.css);
 @import url(components.css);
+@import url(loading.css);
 
 :root {
-  --clr-1: #272829;
-  --clr-2: #AD877B;
-  --clr-3: #e4e4e4;
-  --clr-4: #FFF6E0;
-
   --clr-font-white: #fff;
   --clr-font-color: #1F1F1F;
   --clr-font: white;
@@ -19,6 +15,10 @@
   --clr-body-bg: rgb(255, 255, 255);
 
   --bg-clr: #6d1825;
+  --clr-1: #272829;
+  --clr-2: #AD877B;
+  --clr-3: #e4e4e4;
+  --clr-4: #FFF6E0;
   --clr-5: #313638;
   --clr-6: #34B1AA;
   --clr-7: #d82a27;
@@ -27,6 +27,11 @@
   --clr-9: #ffb2bd;
   --clr-10: #ffffff;
   --clr-11: #445069;
+
+  --grey-50: #eaecf4;
+  --grey-75: rgb(186, 186, 186, 0.75);
+  --grey-100: rgb(186, 186, 186);
+  --grey-200: rgb(99, 115, 129);
 
   --ff-main: 'Share Tech', sans-serif;
   --ff-side: 'Manrope', sans-serif;
@@ -153,7 +158,7 @@
 
 /* -- Modal --*/
 .modal {
-  margin-top: 50px !important;
+ padding-right: 0 !important;
 }
 
 .modal-lg {
@@ -258,10 +263,9 @@ a {
 
 .bg-options {
   background-color: var(--clr-font-white);
-  overflow-y: auto;
-  /* Add this line to enable vertical scrolling */
+  /* overflow-y: auto;
   max-height: 25rem;
-  overflow-x: hidden;
+  overflow-x: hidden; */
 }
 
 .bg-teal {
@@ -364,25 +368,8 @@ a {
   border: none !important;
 }
 
-
 .card {
   border-radius: 0.275rem !important;
-}
-
-.table-size-lg {
-  height: 825px !important;
-}
-
-.table-size {
-  height: 625px !important;
-}
-
-.table-size-sd {
-  max-height: 670px !important;
-}
-
-.table-size-sm {
-  height: 432px !important;
 }
 
 .date-range-size {
@@ -430,7 +417,39 @@ a {
   white-space: nowrap;
 }
 
+.editbutton:hover{
+  cursor: pointer;
+}
+
 /* TABLES STYLE */
+
+table, th, td {
+  border: none !important;
+}
+
+.table-size-lg {
+  max-height: 825px !important;
+}
+
+.table-size {
+  max-height: 625px !important;
+}
+
+.table-size-materialcount {
+  height: 625px !important;
+}
+
+.table-size-sd {
+  max-height: 670px !important;
+}
+
+.table-size-sm {
+  max-height: 432px !important;
+}
+
+.table-size-sm-fixed {
+  height: 432px !important;
+}
 
 /* .table-bordered td, .table-bordered th {
   border: 1px solid var(--clr-btn) !important;
@@ -478,7 +497,7 @@ td {
 .table-header {
   position: sticky;
   top: 0;
-  background-color: white;
+  background-color: var(--grey-50);
   z-index: 1;
 }
 
@@ -594,7 +613,7 @@ td {
   }
 
   .custom-mobile-table .custom-mobile-align {
-    padding-left: 50%;
+    padding-left: 50% !important;
     position: relative;
   }
 
