--- a/views/branch/branch.ejs
+++ b/views/branch/branch.ejs
@@ -207,15 +207,15 @@
             <table class="table table-bordered custom-mobile-table" id="branch-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
-                        <th class = "col-1">Branch ID</th>
-                        <th class = "col-1">Branch Name</th>
-                        <th class = "col-1">TIN</th>
-                        <th class = "col-1">Address</th>
-                        <th class = "col-1">Logo</th>
-                        <th class = "col-1">Created by</th>
-                        <th class = "col-1">Created date</th>
+                        <th>Branch ID</th>
+                        <th>Branch Name</th>
+                        <th>TIN</th>
+                        <th>Address</th>
+                        <th>Logo</th>
+                        <th>Created by</th>
+                        <th>Created date</th>
                         <th class = "col-1">Status</th>
-                        <th class = "col-1">Action</th>               
+                        <th class = "col-1"></th>               
                     </tr>
                 </thead>
                     
