--- a/views/category/category.ejs
+++ b/views/category/category.ejs
@@ -106,12 +106,12 @@
         <table class="table table-bordered custom-mobile-table" id="category-dataTable" width="100%" cellspacing="10">
           <thead class="table-header">
             <tr>
-              <th class="col-1">Category Code</th>
-              <th class="col-3">Category Name</th>
-              <th class="col-3">Created by</th>
-              <th class="col-2">Created date</th>
+              <th>Category Code</th>
+              <th>Category Name</th>
+              <th>Created by</th>
+              <th>Created date</th>
               <th class="col-1">Status</th>
-              <th class="col-2">Action</th>
+              <th class="col-1"></th>
             </tr>
           </thead>
           <tbody></tbody>
