--- a/views/location/location.ejs
+++ b/views/location/location.ejs
@@ -103,7 +103,7 @@
                         <th class = "col-3">Created by</th>
                         <th class = "col-2">Created date</th>
                         <th class = "col-1">Status</th>
-                        <th class = "col-2">Action</th>               
+                        <th class = "col-1"></th>               
                     </tr>
                 </thead>          
                 <tbody>
