--- a/views/materialcount/materialcount.ejs
+++ b/views/materialcount/materialcount.ejs
@@ -58,15 +58,15 @@
                     <div class="card-body extend">
                         <div class="row">
                             <div class="col">
-                                <div class="table-responsive scrollable-table-container-sm table-size">
+                                <div class="table-responsive scrollable-table-container-sm table-size-materialcount">
                                     <table class="table table-bordered custom-mobile-table" id="materials-datatable"
                                         width="100%" cellspacing="10">
                                         <thead class="table-header">
                                             <tr>
-                                                <th class="col-2">Material Name</th>
-                                                <th class="col-1">Material ID</th>
-                                                <th class="col-1">Quantity</th>
-                                                <th class="col-1">Action</th>
+                                                <th>Material Name</th>
+                                                <th>Material ID</th>
+                                                <th>Quantity</th>
+                                                <th class="col-1"></th>
                                             </tr>
                                         </thead>
                                         <tbody>
