--- a/views/payment/payment.ejs
+++ b/views/payment/payment.ejs
@@ -50,7 +50,7 @@
         <div class="col-lg-12">
             <div class="card">
                 <div class="card-header py-3 header-bg">
-                    <h6 class="m-0 font-weight-bold">payment Type</h6>
+                    <h6 class="m-0 font-weight-bold">Payment Type</h6>
                 </div>
                 <div class="card-body extend">
                     <div class="row">
@@ -103,12 +103,12 @@
             <table class="table table-bordered custom-mobile-table" id="payment-table" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
-                        <th class = "col-1">Payment ID</th>
-                        <th class = "col-3">Payment Name</th>
-                        <th class = "col-2">Created by</th>
-                        <th class = "col-2">Created date</th>
-                        <th class = "col-2">Status</th>
-                        <th class = "col-1">Action</th>               
+                        <th>Payment ID</th>
+                        <th>Payment Name</th>
+                        <th>Created by</th>
+                        <th>Created date</th>
+                        <th class="col-1">Status</th>
+                        <th class="col-1"></th>               
                     </tr>
                 </thead>
 
