--- a/views/pos/pos.ejs
+++ b/views/pos/pos.ejs
@@ -153,15 +153,15 @@
             <table class="table table-bordered custom-mobile-table" id="pos-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
-                        <th class = "col-1">POS ID</th>
-                        <th class = "col-1">POS Name</th>
-                        <th class = "col-1">Serial</th>
-                        <th class = "col-1">MIN Info</th>
-                        <th class = "col-1">PTU</th>
-                        <th class = "col-1">Created by</th>
-                        <th class = "col-1">Created date</th>
-                        <th class = "col-1">Status</th>
-                        <th class = "col-1">Action</th>               
+                        <th>POS ID</th>
+                        <th>POS Name</th>
+                        <th>Serial</th>
+                        <th>MIN Info</th>
+                        <th>PTU</th>
+                        <th>Created by</th>
+                        <th>Created date</th>
+                        <th class="col-1">Status</th>
+                        <th class="col-1"></th>               
                     </tr>
                 </thead>
                     
