--- a/views/position/position.ejs
+++ b/views/position/position.ejs
@@ -108,8 +108,8 @@
                         <th class = "col-3">Position Name</th>
                         <th class = "col-3">Created by</th>
                         <th class = "col-2">Created date</th>
-                        <th class = "col-2">Status</th>
-                        <th class = "col-1">Action</th>               
+                        <th class = "col-1">Status</th>
+                        <th class = "col-1"></th>               
                     </tr>
                 </thead>          
                 <tbody>
