--- a/views/production/production.ejs
+++ b/views/production/production.ejs
@@ -88,7 +88,7 @@
                                     </div>
                                 </div>
                                 <div class="row mr-4 ml-4 mb-2">
-                                    <div class="table-responsive scrollable-table-container-xsm table-size-sm">
+                                    <div class="table-responsive scrollable-table-container-xsm table-size-sm-fixed">
                                         <table class="table table-bordered custom-mobile-table" id="components-datatable" width="100%" cellspacing="10">
                                             <thead class="table-header">
                                                 <tr>
