--- a/views/products/productsscripts.ejs
+++ b/views/products/productsscripts.ejs
@@ -9,6 +9,24 @@ $(document).ready(function () {
     let status = "";
 
     LoadTable();
+
+    const loader = `  
+    <tr id="loading-state">
+      <td><div class="custom-loader"></div></td>
+      <td><div class="custom-loader"></div></td>
+      <td><div class="custom-loader"></div></td>
+      <td><div class="custom-loader"></div></td>
+      <td><div class="custom-loader"></div></td>
+      <td><div class="custom-loader"></div></td>
+      <td><div class="custom-loader"></div></td>
+      <td><div class="custom-loader"></div></td>
+      <td><div class="custom-loader"></div></td>
+    </tr>`;
+
+    const tbody = $('#products-dataTable tbody');
+    for(let i = 0; i < 7; i++){
+      tbody.append(loader);
+    }
     
     $('#products-dataTable tbody').on('click', 'tr', function () {
         var dataRow = [];
@@ -229,18 +247,26 @@ $(document).ready(function () {
                 let action = '';
                 if (item.status === 'ACTIVE') {
                     action = `
-                        <button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button>
-                        <button id="inactiveBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="inactiveBtn">INACTIVE</button>`;
+                        <span class="editbutton" id="editBtn" name="editBtn" data-toggle="modal" data-target="#accessModal"><i class="fas fa-edit" style="color: rgb(99, 115, 129);"></i></span>
+                        <span class="editbutton" id="inactiveBtn"><i class="fas fa-eye-slash" style="color: rgb(99, 115, 129);"></i></span>`;
                 } else if (item.status === 'INACTIVE') {
                     action = `
-                        <button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button>
-                        <button id="activeBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="activeBtn">ACTIVE</button>`;
+                        <span class="editbutton" id="editBtn" name="editBtn" data-toggle="modal" data-target="#accessModal"><i class="fas fa-edit" style="color: rgb(99, 115, 129);"></i></span>
+                        <span class="editbutton" id="activeBtn"><i class="fas fa-eye" style="color: rgb(99, 115, 129);"></i></span>`;
                 }
+                const statusBackground = item.status === 'ACTIVE' ? 'status-success' : 'status-warning';
+                const containerBackground = item.status === 'ACTIVE' ? 'status-container-sc' : 'status-container-wr';
                 
                 const numericValue = parseFloat(item.price.replace(/₱|,/g, ''));
 
                 const tr = $('<tr>').append(
                     $('<td>', { text: item.productid, 'data-label': 'Product ID', class: 'custom-mobile-align' }),
+                    $('<td>', {
+                        html: item.productimage
+                            ? `<img src="data:image/png;base64,${item.productimage}" alt="Product Image" class="product-image" style="max-width: 150px; max-height: 100px;"/>`
+                            : 'No Image',
+                        'data-label': 'Product Image',
+                    }),
                     $('<td>', { text: item.description, 'data-label': 'Description', class: 'custom-mobile-align' }),
                     $('<td>', {
                         text: isNaN(numericValue) ? 'N/A' : formatCurrency(numericValue),
@@ -248,15 +274,13 @@ $(document).ready(function () {
                         class: 'custom-mobile-align'
                     }),
                     $('<td>', { text: item.barcode, 'data-label': 'Barcode', class: 'custom-mobile-align' }),
-                    $('<td>', {
-                        html: item.productimage
-                            ? `<img src="data:image/png;base64,${item.productimage}" alt="Product Image" class="product-image" style="max-width: 200px; max-height: 150px;"/>`
-                            : 'No Image',
-                        'data-label': 'Product Image',
-                    }),
                     $('<td>', { text: item.createdby, 'data-label': 'Created By', class: 'custom-mobile-align' }),
                     $('<td>', { text: item.createddate, 'data-label': 'Created Date', class: 'custom-mobile-align' }),
-                    $('<td>', { text: item.status, 'data-label': 'Status', class: 'custom-mobile-align' }),
+                    $('<td>', { class: 'custom-mobile-align', 'data-label': 'Status' }).append(
+                        $('<div>', { class: containerBackground }).append(
+                        $('<span>', { text: item.status, class: statusBackground })
+                        )
+                    ),
                     $('<td>', { html: action, 'data-label': 'Action'})
                 );
 
