--- a/views/users/users.ejs
+++ b/views/users/users.ejs
@@ -152,15 +152,15 @@
             <table class="table table-bordered custom-mobile-table" id="users-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
-                        <th class = "col-1">User Code</th>
-                        <th class = "col-1">Employee ID</th>
-                        <th class = "col-1">Access Type</th>
-                        <th class = "col-1">Username</th>
-                        <th class = "col-1">Branch ID</th>
-                        <th class = "col-2">Created by</th>
-                        <th class = "col-2">Created date</th>
+                        <th>User Code</th>
+                        <th>Employee ID</th>
+                        <th>Access Type</th>
+                        <th>Username</th>
+                        <th>Branch ID</th>
+                        <th>Created by</th>
+                        <th>Created date</th>
                         <th class = "col-1">Status</th>
-                        <th class = "col-1">Action</th>               
+                        <th class = "col-1"></th>               
                     </tr>
                 </thead>
                     
